# BOB

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  app.js  build.gradle.kts  cookies.json  index.html  input.txt  package-lock.json  package.json  settings.gradle.kts
ZPBackend/: .gitignore  Dockerfile  app.js  cookies.json  example.env  package-lock.json  package.json  updateCookies.js
ZPBlockchain/: .gitignore  Cargo.toml
ZPBlockchain/src/: main.rs
ZPBlockchain/src/block/: functions.rs
ZPBlockchain/src/mining/: functions.rs  mod.rs
ZPBlockchain/src/structs/: block.rs  mod.rs  passengerData.rs  processTransmitionData.rs  tags.rs
ZPComposeDekstopApp/: .gitignore  build.gradle.kts  settings.gradle.kts
ZPFrontend/: .gitignore  index.html
ZPGame/: README.md  build.gradle
ZPLanguage/: run.sh  test.sh
ZPMobileApp/: build.gradle.kts  example.env  settings.gradle.kts
ZPOccupancyDetection/: data_processing.py  human_detection_dataset.py  image_processing.py  image_processing_yolo.py  main.py  model_training.py  results_of_testing.txt  single_shot_model.py  test_images.py  train_model_test.py
config/: URLs.env  blacklist_example.env  database_example.env  secrets_example.env
controllers/: delayController.js  routeController.js  shared.js  stationController.js  testController.js  trainLocHistoryController.js  userController.js
examples/: example0.expected.txt  example0.txt  example1.expected.txt  example1.txt  example2.txt  example3.expected.txt  example4.expected.txt  example4.txt
models/: delayModel.js  routeModel.js  stationModel.js  (+2 more)
(+348 files in other folders)
