[package]
name = "ZPBlockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
base64ct = {version = "1.6.0", features = ["alloc"]}
chrono = {version = "0.4.39", features = ["serde"]}
hex = "0.4.3"
mpi = "0.8.0"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.135"
sha2 = "0.10.8"
