[package]
name = "ZPBlockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
base64ct = {version = "1.6.0", features = ["alloc"]}
bson =  {version = "2.10.0", features = ["chrono-0_4"]}
chrono = {version = "0.4.39", features = ["serde"]}
hex = "0.4.3"
mongodb = {version = "3.2.0", features = ["sync"]}
mpi = {version = "0.8.0", features = ["derive"]}
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.135"
sha2 = "0.10.8"
